# jarvis-ai-os

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
backend/alembic/: env.py
backend/alembic/versions/: 1cd607497503_add_company_and_product_tables.py  4f83990d5a69_initial_schema.py  a1b2c3d4e5f6_add_workspace_state_json.py  a23853679925_multi_company_add_checklists_json_to_.py  a9d2e5f7c3b8_add_memory_confidence_and_audit_log.py  b1e4f6a8c3d0_add_capability_framework.py  b2c3d4e5f6a7_add_clients.py  c4f9a17e2b6d_add_website_and_divisions_to_companies.py  c7f2a9d1e5b3_add_oauth_states.py  d1f2a3b4c5e6_add_shared_project_system.py  d8a3c5f19e47_scope_tasks_to_company_and_add_board_.py  f7d1a4c96e28_add_agent_runs.py  (+3 more)
backend/app/: config.py  exceptions.py  logging_config.py  main.py
backend/tests/: conftest.py
data/: jarvis.db.backup-20260722-002435  jarvis.db.pre-merge-20260722-004603  jarvis.db.pre-rename-20260722-015255  jarvis.db.pre-restore-20260722-023002
docs/: GETTING_STARTED.md  JARVIS_PHASE_2_ROADMAP.md  JARVIS_PHASE_3_PLAN.md  PLUGIN_DEVELOPMENT.md  QUICK_ACTIONS_PRODUCTION_READINESS.md  ROADMAP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: prune_import_noise.py  reembed_memory.py  restore_two_workspaces.py  seed_companies.py  seed_demo.py
(+279 files in other folders)
